fix: CORS for dev env